--- a/core/i18n/resource/i18n/pl-PL.csv
+++ b/core/i18n/resource/i18n/pl-PL.csv
@@ -46,3 +46,5 @@
 "Must be greater than 0","Musi być większa niż 0"
 "Are you sure you would like to remove this item from the shopping cart?","Czy na pewno chcesz usunąć ten produkt z koszyka?"
 "You need to be logged in to see this page","Musisz być zalogowany, aby zobaczyć tę stronę"
+"Upsell Category","Kategoria Upsell"
+"You May also like","Spodobają Ci się również"
