--- a/core/i18n/resource/i18n/pl-PL.csv
+++ b/core/i18n/resource/i18n/pl-PL.csv
@@ -48,3 +48,5 @@
 "You need to be logged in to see this page","Musisz być zalogowany, aby zobaczyć tę stronę"
 "Upsell Category","Kategoria Upsell"
 "You May also like","Spodobają Ci się również"
+"You May also like","Spodobają Ci się również"
+"Not found","Nie znaleziono strony"
