Translation for provide another discount code

--- a/core/i18n/resource/i18n/pl-PL.csv
+++ b/core/i18n/resource/i18n/pl-PL.csv
@@ -50,3 +50,4 @@
 "You May also like","Spodobają Ci się również"
 "You May also like","Spodobają Ci się również"
 "Not found","Nie znaleziono strony"
+"Provide different discount code","Wprowadź inny kupon"
